# libctwitch

./: .gitignore  CMakeLists.txt  README.md  libctwitch.pc.in  twitch-test.c
example/: .twitch-remote.c.swp  twitch-remote.c
include/: ctwitch.h  data.h  helix.h  v5.h
include/ctwitch/: auth.h  common.h  ctwitch.h  helix.h  v5.h
include/ctwitch/helix/: channels.h  data.h  games.h  search.h  streams.h  teams.h  token.h  users.h  videos.h
include/ctwitch/v5/: channels.h  data.h  games.h  search.h  streams.h  teams.h  users.h
include/helix/: data.h  streams.h  token.h  users.h
include/v5/: channels.h  data.h  games.h  search.h  streams.h  teams.h  users.h
src/: array_utils.h  auth.c  common.c  data.c  data.h  init.c  json.h  parser.c  parser.h  string_utils.h  twitch.c  twitch.h
src/helix/: channels.c  data.c  games.c  search.c  streams.c  teams.c  token.c  users.c  videos.c
src/json/: json.c
src/utils/: array_utils.c  array_utils.h  data_utils.c  datagen.h  network_helix_utils.c  network_helix_utils.h  network_utils.c  network_utils.h  parser.c  parser.h  string_utils.c  string_utils.h
src/utils/arrays/: arrays.c  arrays.h
src/utils/data/: data.c  data.h
src/utils/network/: helix.c  helix.h  network.c  network.h
src/utils/parser/: parser.c
src/utils/strings/: strings.c  strings.h
src/v5/: channels.c  data.c  games.c  search.c  streams.c  teams.c  users.c
